--- a/index.html
+++ b/index.html
@@ -5,13 +5,55 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="vieport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<form>
-Search: <input id="searchBox" type="text" name="searchbox">
-<button onclick="searchItunes()">Search</button>
-</form>
+	<div class="container">
+		<div class="row" style="background-color: pink;">
+			<div class="col-xs-4">
+				<form>
+					Search: <input id="searchBox" type="text" name="searchbox">
+					<button onclick="searchItunes()">Search</button>
+				</form>
+			</div>
+			<div class="col-xs-8">
+				<div class="resultBox">
+					<div>
+						<div class="sticky" style="background-color: pink; width: 100%;">
+						<h1 style="">Kanye West</h1>
+						</div>
+						<img src="images/kanyeWestCollegeDropout.jpg" align="left" style=" display: inline; position: relative; right: 10px">
+						<h2 style="color:#a6a6a6;">The College Dropout</h2>
+						<ol style="position: relative; left:20px;">
+							<li>intro</li>
+							<li>We Don't Care</li>
+							<li>Graduation Day</li>
+							<li>All Falls Down</li>
+							<li>I'll Fly Away</li>
+							<li>Spaceship</li>
+							<li>Jesus Walks</li>
+							<li>Never Let Me Down</li>
+						</ol>
+					</div>
+					<div>
+						<img src="images/kanyeWestCollegeDropout.jpg" align="left" style=" display: inline; position: relative; right: 10px">
+						<h2 style="color:#a6a6a6;">The College Dropout</h2>
+						<ol style="position: relative; left:20px;">
+							<li>intro</li>
+							<li>We Don't Care</li>
+							<li>Graduation Day</li>
+							<li>All Falls Down</li>
+							<li>I'll Fly Away</li>
+							<li>Spaceship</li>
+							<li>Jesus Walks</li>
+							<li>Never Let Me Down</li>
+						</ol>
+					</div>
+				<p id="resultBox"> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br></p>
+				</div>
+			</div>
+		</div>
+	</div>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="itunes-search.js"></script>
