moved results into scrollable div

--- a/index.html
+++ b/index.html
@@ -17,40 +17,8 @@
 				</form>
 			</div>
 			<div class="col-xs-8">
-				<div class="resultBox">
-					<div>
-						<div class="sticky" style="background-color: pink; width: 100%;">
-						<h1 style="">Kanye West</h1>
-						</div>
-						<img src="images/kanyeWestCollegeDropout.jpg" align="left" style=" display: inline; position: relative; right: 10px">
-						<h2 style="color:#a6a6a6;">The College Dropout</h2>
-						<ol style="position: relative; left:20px;">
-							<li>intro</li>
-							<li>We Don't Care</li>
-							<li>Graduation Day</li>
-							<li>All Falls Down</li>
-							<li>I'll Fly Away</li>
-							<li>Spaceship</li>
-							<li>Jesus Walks</li>
-							<li>Never Let Me Down</li>
-						</ol>
-					</div>
-					<div>
-						<img src="images/kanyeWestCollegeDropout.jpg" align="left" style=" display: inline; position: relative; right: 10px">
-						<h2 style="color:#a6a6a6;">The College Dropout</h2>
-						<ol style="position: relative; left:20px;">
-							<li>intro</li>
-							<li>We Don't Care</li>
-							<li>Graduation Day</li>
-							<li>All Falls Down</li>
-							<li>I'll Fly Away</li>
-							<li>Spaceship</li>
-							<li>Jesus Walks</li>
-							<li>Never Let Me Down</li>
-						</ol>
-					</div>
-				<p id="resultBox"> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br> the life of pablo <br></p>
-				</div>
+				<div class="resultBox" id="resultBox">
+				</div>	
 			</div>
 		</div>
 	</div>
