--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 			<div class="col-xs-4">
 				<form>
 					Search: <input id="searchBox" type="text" name="searchbox">
-					<button onclick="searchItunes()">Search</button>
+					
 				</form>
+				<button onclick="searchItunes()">Search</button>
 			</div>
 			<div class="col-xs-8">
 				<div class="resultBox" id="resultBox">
@@ -22,11 +23,11 @@
 			</div>
 		</div>
 	</div>
-<script
+<!--<script
   src="http://code.jquery.com/jquery-2.2.4.js"
   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
   crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
 <script type="text/javascript" src="itunes-search.js"></script>
 </body>
 </html>
