--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="container">
-		<div class="row" style="background-color: pink;">
+		<div class="row" style="background-color: pink; height: 100vh;">
 			<div class="col-xs-4">
 				<form>
 					Search: <input id="searchBox" type="text" name="searchbox">
