--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<div class="container">
 		<div class="row" style="background-color: pink; height: 100vh;">
 			<div class="col-xs-4">
-				<form>
+				<form onsubmit="return callSearch()">
 					Search: <input id="searchBox" type="text" name="searchbox">
+					<button onclick="callSearch()">Search</button>
 				</form>
-				<button onclick="searchItunes()">Search</button>
 			</div>
 			<div class="col-xs-8">
 				<div class="resultBox" id="resultBox">
